<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instructionsScreen.InstructionsFragment">
    <data>

    </data>
    <LinearLayout
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_1_go_to_sho_list"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="step 2: click on add button"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_3_add_shoe_information"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="start"
            android:layout_marginBottom="60dp"
            />
        <Button
            android:id="@+id/get_it_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/got_it"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>



</layout>